objects/Building_Contact__c/Building_Contact__c.object-meta.xml
<CustomObject>
    <label>Building Contact</label>
    <nameField>
        <displayFormat>BC-{00000000}</displayFormat>
        <label>Building Contact ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Building Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>