objects/Building_Contact__c/fields/Building__c.field-meta.xml
<CustomField>
    <fullName>Building__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Building</label>
    <referenceTo>Building__c</referenceTo>
    <relationshipLabel>Building Contacts</relationshipLabel>
    <relationshipName>Building_Contacts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>