objects/Building_Contact__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Building Contacts</relationshipLabel>
    <relationshipName>Building_Contacts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>