objects/Building_Contact__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Property Manager</fullName>
            </value>
            <value>
                <fullName>Leasing Office</fullName>
            </value>
            <value>
                <fullName>Building Access</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>